2006-12-14  Kjartan Maraas  <kmaraas@gnome.org>

	* autogen.sh: Make this work with automake 1.10 too.

2006-11-18  Johan Dahlin  <jdahlin@async.com.br>

	* configure.ac: Post release version bump

=== 2.12.3 ===
2006-11-18  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

	* gobject/pygoptiongroup.c (pyg_option_group_dealloc): 
	* tests/test_option.py (TestOption.testBadConstructor): 
	Make sure an exception is raised when we pass in invalid arguments
	to the optiongroup constructor, add a test. #364576 (Laszlo Pandy)

	* gobject/pygobject.c (pygobject_register_class): set __module__ on
	gobject derived types, fixes #376099 (Osmo Salomaa)

2006-11-18  Yevgen Muntyan  <muntyan@tamu.edu>

	reviewed by: Johan Dahlin  <johan@gnome.org>

	* gobject/gobjectmodule.c: (create_property):
	* gobject/pygparamspec.c: (pyg_param_spec_getattr):
	* tests/test_properties.py:

	Avoid truncating in pyg_param_spec_getattr, add test for all non-float
	numeric types. Fixes #353943

2006-11-18  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygtype.c (gclosure_from_pyfunc): Use PyObject_Cmp instead
	of comparing function closure addresses, which makes it possible 
	to use any callable and not just functions. 
	Fixes #375589 (Dima)

2006-10-13  John Finlay  <finlay@moeraki.com>

	* docs/Makefile.am (HTML_FILES): Remove 
	html/pygobject-reference-copyright.html.
	Fixes #361906 (Marc-Andre Lureau)

2006-10-11  John Finlay  <finlay@moeraki.com>

	* docs/reference/pygobject-introduction.xml: Remove Copyright and
	License section.

	* docs/reference/pygobject-ref.xml: Remove author info

2006-10-05  Cedric Gustin  <cedric.gustin@gmail.com>

	* dsextras.py (Template) (TemplateExtension): Add
	py_ssize_t_clean flag to be passed to codegen.SourceWriter.

2006-10-04  Cedric Gustin  <cedric.gustin@gmail.com>

	* Makefile.am: Add pygobject_postinstall.py to EXTRA_DIST.

2006-10-03  Johan Dahlin  <jdahlin@async.com.br>

	* configure.ac: Post release version bump

=== 2.12.2 ===